[metadata]
name = rssboard
author = Jianing Yang
author-email = jianing.yang@qunar.com
summary = A RSS Dashboard
license = Apache-2
classifier =
    Development Status :: 1 - Planning
        Environment :: Web Environment
        Framework :: Flask
        Intended Audience :: Information Technology
        License :: OSI Approved :: Apache Software License
        Operating System :: OS Independent
        Programming Language :: Python

[files]
packages =
    rssboard
data_files =

[entry_points]
console_scripts =
    rssboard-frontend = rssboard.cmd:run_frontend
    rssboard-manage = rssboard.cmd:run_manage
